force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowCrediting__c.field-meta.xml
<CustomField>
    <fullName>AllowCrediting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Crediting</label>
    <type>Checkbox</type>
</CustomField>