force-app/main/default/objects/BillingAccountManagerSettings__c/fields/CreditCharge__c.field-meta.xml
<CustomField>
    <fullName>CreditCharge__c</fullName>
    <label>Credit Charge</label>
    <length>32</length>
    <type>Text</type>
</CustomField>