force-app/main/default/objects/BillingAccountManagerSettings__c/fields/EnableCredits__c.field-meta.xml
<CustomField>
    <fullName>EnableCredits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Credits</label>
    <type>Checkbox</type>
</CustomField>