force-app/main/default/objects/BillingAccountManagerSettings__c/fields/MaximumCreditAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaximumCreditAllowed__c</fullName>
    <label>Maximum Credit Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>